--- a/1-the-browser-environment/vid-2-thinking-globally/index.html
+++ b/1-the-browser-environment/vid-2-thinking-globally/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
-    <p>Making a web page interactive</p>
+    <p id="myParagraph">Making a web page interactive</p>
+ 
+     <script src="js/app.js"></script>
   </body>
 </html>
